from 2.5.5 to 2.5.4
- fixed the displayed message when reading old archives
- fixed bug that avoided dar-2.5.x code to read old archive format when
  special allocation was set (by defaut) at compilation time
- disabling special-alloc by default

from 2.5.3 to 2.5.4
- fixing missing included files for libdar API
- removed extra try/catch block introduced by commit
  72da5cad5e52f959414b3163a2e2a320c2bc721e
- removed sanity check that caused problem when writing an archive to a
  FUSE based filesystem.
- fixing non call of the -E script/command after last slice creation,
  when encryption or slice hashing was used
- fixed bug in dar_manager: archive permutation in database lead libdar
  to check an archive number of range under certain circumstances
- fixed inversion of the condition triggering a warning about archive
  date order in a dar_manager database while moving an archive within a
  database
- fixed typos in documentation
- catalogue memory optimization, with the drawback to limit the number of
  entry in an archive to the max integer supported by the libdar flavor
  (32 bits/64 bits/infinint).
- fix configure script to temporarily rely on LIBS rather LDFLAGS to
  check for gpgme availability
- removed order dependency between -A and -9 options of dar_manager: -9
  can now be specified before or after -A option.
- resetting to "false" the "inode_wrote" flag of hard link data-structure
  before testing and merging. Merging a previously tested archive or
  testing a second time would not include hard linked inode in the
  operation. This situation does not occurs with dar but could succeed
  with some external tools that keep the catalogue in memory to perform
  different operations on it.
- fixed bug in the routine that detects existing slices to warn the user
  and/or avoid overwriting, bug that lead dar to "bark" when an archive
  base name started by a + character.
- avoiding to use AM_PATH_GPGME in configure script when gpgme.m4 is not
  available