@@ -1,3 +1,7 @@
+version 2.5.5
+--------------
+Thanks to Georg Sauthoff for feedback
+
 version 2.5.4
 --------------
 Thanks to Tobias Specht for bug report. Thanks to Jared Jennings for bug
