@@ -3,6 +3,8 @@ from 2.5.5 to 2.5.4
 - fixed bug that avoided dar-2.5.x code to read old archive format when
   special allocation was set (by defaut) at compilation time
 - disabling special-alloc by default
+- fixed error in FAQ about the way ctime/atime/mtime are modified during
+  normal operating system life.
 
 from 2.5.3 to 2.5.4
 - fixing missing included files for libdar API
